#
# Copyright 2016- Stichting Fundamenteel Onderzoek der Materie (FOM-Nikhef)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Authors:
#      Mischa Salle <msalle@nikhef.nl>
#      NIKHEF Amsterdam, the Netherlands
#      grid-mw-security-support@nikhef.nl

#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([argus-policy-iota-update], [0.0.1], [grid-mw-security-support@nikhef.nl])
AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
